--- a/src/lib/presentation/resources/presentation.qrc
+++ b/src/lib/presentation/resources/presentation.qrc
@@ -33,5 +33,6 @@
         <file>themes/Midna.json</file>
         <file>themes/MidnaDark.json</file>
         <file>themes/Ambiance.json</file>
+        <file>icons/gitlab.svg</file>
     </qresource>
 </RCC>
