--- a/src/lib/infrastructure/resources/infrastructure.qrc
+++ b/src/lib/infrastructure/resources/infrastructure.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/MellowPlayer/Infrastructure">
-        <file>Settings/schema.json</file>
+        <file>Settings/settings-schema.json</file>
         <file>PluginTemplate/integration.js</file>
         <file>PluginTemplate/logo.svg</file>
         <file>PluginTemplate/metadata.ini</file>
