--- a/src/lib/infrastructure/resources/infrastructure.qrc
+++ b/src/lib/infrastructure/resources/infrastructure.qrc
@@ -5,5 +5,6 @@
         <file>PluginTemplate/logo.svg</file>
         <file>PluginTemplate/metadata.ini</file>
         <file>PluginTemplate/theme.json</file>
+        <file>images/mellowplayer-connect.svg</file>
     </qresource>
 </RCC>
