Fix C++ and QML warnings when using Qt 5.15

--- a/src/lib/presentation/imports/imports.qrc
+++ b/src/lib/presentation/imports/imports.qrc
@@ -44,6 +44,7 @@
         <file>MellowPlayer/Dialogs/MessageBoxDialog.qml</file>
         <file>MellowPlayer/Dialogs/Prompt.qml</file>
         <file>MellowPlayer/Dialogs/Reload.qml</file>
+        <file>MellowPlayer/Dialogs/FileDialog.qml</file>
         <file>MellowPlayer/Dialogs/StreamingServiceSettingsDialog.qml</file>
         <file>MellowPlayer/MainWindow.qml</file>
         <file>MellowPlayer/MaterialIcons.qml</file>
