#464 Technical stack update
Fix some qmllint 5.15 warnings

--- a/src/lib/presentation/imports/imports.qrc
+++ b/src/lib/presentation/imports/imports.qrc
@@ -36,6 +36,7 @@
         <file>MellowPlayer/Delegates/StringSettingDelegate.qml</file>
         <file>MellowPlayer/Delegates/TextFieldDelegate.qml</file>
         <file>MellowPlayer/DevToolsWindow.qml</file>
+        <file>MellowPlayer/Dialogs/NativeFileDialog.qml</file>
         <file>MellowPlayer/Dialogs/AboutDialog.qml</file>
         <file>MellowPlayer/Dialogs/Alert.qml</file>
         <file>MellowPlayer/Dialogs/Authentication.qml</file>
