--- a/src/lib/presentation/imports/imports.qrc
+++ b/src/lib/presentation/imports/imports.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/MellowPlayer/imports">
         <file>MellowPlayer/qmldir</file>
+        <file>MellowPlayer/Actions.qml</file>
         <file>MellowPlayer/Dialogs/BrowserDialog.qml</file>
         <file>MellowPlayer/Controls/CustomUrlPane.qml</file>
         <file>MellowPlayer/Controls/FullScreenNotification.qml</file>
@@ -14,6 +15,7 @@
         <file>MellowPlayer/Controls/ListeningHistoryListView.qml</file>
         <file>MellowPlayer/Controls/ListeningHistorySearchPane.qml</file>
         <file>MellowPlayer/Controls/ListeningHistoryToolBar.qml</file>
+        <file>MellowPlayer/Controls/MainMenu.qml</file>
         <file>MellowPlayer/Controls/MainToolBar.qml</file>
         <file>MellowPlayer/Controls/ServicesOverview.qml</file>
         <file>MellowPlayer/Controls/SettingsDrawer.qml</file>
@@ -23,7 +25,7 @@
         <file>MellowPlayer/Controls/WebView.qml</file>
         <file>MellowPlayer/Controls/WebViewContextMenu.qml</file>
         <file>MellowPlayer/Delegates/BoolSettingDelegate.qml</file>
-        <file>MellowPlayer/Delegates/IntSettingDelegate.qml</file>
+        <file>MellowPlayer/Delegates/ScalingFactorSettingDelegate.qml</file>
         <file>MellowPlayer/Delegates/IconSettingDelegate.qml</file>
         <file>MellowPlayer/Delegates/ColorSettingDelegate.qml</file>
         <file>MellowPlayer/Delegates/EnumSettingDelegate.qml</file>
@@ -67,5 +69,7 @@
         <file>MellowPlayer/Dialogs.js</file>
         <file>MellowPlayer/SettingsTranslator.js</file>
         <file>MellowPlayer/Dialogs/ReportIssueDialog.qml</file>
+        <file>MellowPlayer/Controls/WebViewToolBar.qml</file>
+        <file>MellowPlayer/Controls/PlayerToolBar.qml</file>
     </qresource>
 </RCC>
