--- a/src/lib/presentation/imports/imports.qrc
+++ b/src/lib/presentation/imports/imports.qrc
@@ -67,6 +67,10 @@
         <file>MellowPlayer/SettingsPages/RemoteControl/RemoteControlState_Stopped.qml</file>
         <file>MellowPlayer/DateCategoryTranslator.js</file>
         <file>MellowPlayer/Dialogs.js</file>
+        <file>MellowPlayer/Helpers/StringHelpers.js</file>
+        <file>MellowPlayer/Helpers/WebViewHelpers.js</file>
+        <file>MellowPlayer/Helpers/ModelHelpers.js</file>
+        <file>MellowPlayer/Helpers/TabBarHelpers.js</file>
         <file>MellowPlayer/SettingsTranslator.js</file>
         <file>MellowPlayer/Dialogs/ReportIssueDialog.qml</file>
         <file>MellowPlayer/Controls/WebViewToolBar.qml</file>
