#464 Technical stack update
Rename singleton view models to be more coherent

--- a/src/lib/presentation/imports/imports.qrc
+++ b/src/lib/presentation/imports/imports.qrc
@@ -45,7 +45,7 @@
         <file>MellowPlayer/Dialogs/Prompt.qml</file>
         <file>MellowPlayer/Dialogs/Reload.qml</file>
         <file>MellowPlayer/Dialogs/StreamingServiceSettingsDialog.qml</file>
-        <file>MellowPlayer/MainAppWindow.qml</file>
+        <file>MellowPlayer/MainWindow.qml</file>
         <file>MellowPlayer/MaterialIcons.qml</file>
         <file>MellowPlayer/NewPluginWizard/CreatingPage.qml</file>
         <file>MellowPlayer/NewPluginWizard/DetailsPage.qml</file>
