#417 Making MellowPlayer adaptive for smaller screens
- improve service selection menu (make active service more visible)
- improve About and ReportIssue dialog to fit in a smaller window size
- improve toolbar -> hide player & web control toolbar if window is too small
- show player footer if window is too small
- add a drawer at the bottom of the window that can be used to conveniently control the player on a small window
- make all drawer draggable in touch screen mode
- add a zen mode menu item shows the player drawer in desktop mode
- use a swipe delegate in listening history in touch screen mode to allow user to delete or copy the entry content
- fix web view zoom change not always taken into account

--- a/src/lib/presentation/imports/imports.qrc
+++ b/src/lib/presentation/imports/imports.qrc
@@ -76,5 +76,7 @@
         <file>MellowPlayer/Dialogs/ReportIssueDialog.qml</file>
         <file>MellowPlayer/Controls/WebViewToolBar.qml</file>
         <file>MellowPlayer/Controls/PlayerToolBar.qml</file>
+        <file>MellowPlayer/Controls/PlayerFooter.qml</file>
+        <file>MellowPlayer/Controls/PlayerDrawer.qml</file>
     </qresource>
 </RCC>
